--- a/Dataviz.html
+++ b/Dataviz.html
@@ -1,1 +1,52 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Display a map</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.2.2/ol.css">
+    <script src="https://cdn.jsdelivr.net/npm/ol@v7.2.2/dist/ol.js"></script>
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+        }
+        #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+    }
+    </style>
+</head>
+<body>
+    <div id="map"></div>   
+    <script>
+        const key = 'RJBl8hU08eD5X07Z2FDv	';
+const source = new ol.source.TileJSON({
+  url: `https://api.maptiler.com/maps/streets-v2/tiles.json?key=${key}`,
+  tileSize: 512,
+  crossOrigin: 'anonymous'
+});
+
+const attribution = new ol.control.Attribution({
+  collapsible: false,
+});
+
+const map = new ol.Map({
+  layers: [
+    new ol.layer.Tile({
+      source: source
+    })
+  ],
+  controls: ol.control.defaults.defaults({attribution: false}).extend([attribution]),
+  target: 'map',
+  view: new ol.View({
+    constrainResolution: true,
+    center: ol.proj.fromLonLat([16.62662018, 49.2125578]),
+    zoom: 14
+  })
+});
+    </script>
+</body>
+</html>
