--- a/Dataviz.html
+++ b/Dataviz.html
@@ -15,9 +15,11 @@
     
     <form>  
       <select id="selectState" name="région recherché">
+        <option value="">--Sélectionnez votre région --</option>
       </select>
 
       <select id="selectCity" name="ville recherché">
+        <option value="">--Sélectionnez votre ville --</option>
       </select>
       <input id="searchBar"type="text" name="name" placeholder="Entrer votre localisation "/><br/> 
       
@@ -42,20 +44,7 @@ const attribution = new ol.control.Attribution({
   collapsible: false,
 });
 
-const map = new ol.Map({
-  layers: [
-    new ol.layer.Tile({
-      source: source
-    })
-  ],
-  controls: ol.control.defaults.defaults({attribution: false}).extend([attribution]),
-  target: 'map',
-  view: new ol.View({
-    constrainResolution: true,
-    center: ol.proj.fromLonLat([16.62662018, 49.2125578]),
-    zoom: 14
-  })
-});
+
     </script>
 
 
