--- a/Dataviz.html
+++ b/Dataviz.html
@@ -39,26 +39,27 @@
       const key = 'B4RKodLYNnkq29LoNaqq	';
 
       const source = new ol.source.TileJSON({
-      url: `https://api.maptiler.com/maps/streets-v2/tiles.json?key=${key}`,
-      tileSize: 512,
-      crossOrigin: 'anonymous'
+  url: `https://api.maptiler.com/maps/streets-v2/tiles.json?key=${key}`,
+  tileSize: 512,
+  crossOrigin: 'anonymous'
 });
-      const map = new ol.Map({
-          layers: [
-            new ol.layer.Tile({
-              source: source
-            })
-          ],
-          controls: ol.control.defaults.defaults({attribution: false}).extend([attribution]),
-          target: 'map',
-          view: new ol.View({
-            constrainResolution: true,
-            center: ol.proj.fromLonLat(5,45),
-            zoom: 6
-        })
-      });
-      const attribution = new ol.control.Attribution({
-      collapsible: false,
+
+const attribution = new ol.control.Attribution({
+  collapsible: false,
+});
+
+const map = new ol.Map({
+  layers: [
+    new ol.layer.Tile({
+      source: source
+    })
+  ],
+  target: 'map',
+  view: new ol.View({
+    constrainResolution: true,
+    center: ol.proj.fromLonLat([16.62662018, 49.2125578]),
+    zoom: 14
+  })
 });
     </script>
 
