--- a/Dataviz.html
+++ b/Dataviz.html
@@ -35,8 +35,7 @@
     <div id="map">
     </div>   
     <script>
-
-      const key = 'B4RKodLYNnkq29LoNaqq	';
+   const key = 'B4RKodLYNnkq29LoNaqq	';
 
       const source = new ol.source.TileJSON({
   url: `https://api.maptiler.com/maps/streets-v2/tiles.json?key=${key}`,
@@ -47,7 +46,6 @@
 const attribution = new ol.control.Attribution({
   collapsible: false,
 });
-
 const map = new ol.Map({
   layers: [
     new ol.layer.Tile({
@@ -56,9 +54,13 @@ const map = new ol.Map({
   ],
   target: 'map',
   view: new ol.View({
-    constrainResolution: true,
-    center: ol.proj.fromLonLat([16.62662018, 49.2125578]),
-    zoom: 14
+    center: ol.proj.fromLonLat([4,47]),
+    zoom: 4
+
+  //view: new ol.View({
+   //constrainResolution: true,
+    //center: ol.proj.fromLonLat([16.62662018, 49.2125578,]),
+    //zoom: 14
   })
 });
     </script>
