--- a/Dataviz.html
+++ b/Dataviz.html
@@ -26,7 +26,7 @@
       </select>
       
     
-      <button id="searchButton" type="button" onclick="callApiSearch()" > Voir l'indice polution</button>  
+      <button id="searchButton" type="button" onclick="callApiSearch()" > <span>Voir l'indice de pollution</span> </button>  
 
       </form>
       <p id="localSearch">retour de test input.</p>
