--- a/Dataviz.html
+++ b/Dataviz.html
@@ -109,16 +109,25 @@
       // When the user clicks on <div>, open the popup
       function popupVerte() {
         var popup = document.getElementById("myPopup");
+        popup.classList.remove("showVerte");
+        popup.classList.remove("showOrange")
+        popup.classList.remove("showRouge")
         popup.classList.toggle("showVerte");
       }
 
       function popupRouge() {
         var popup = document.getElementById("myPopup");
+        popup.classList.remove("showVerte");
+        popup.classList.remove("showOrange")
+        popup.classList.remove("showRouge")
         popup.classList.toggle("showRouge");
       }
 
       function popupOrange() {
         var popup = document.getElementById("myPopup");
+        popup.classList.remove("showVerte");
+        popup.classList.remove("showOrange")
+        popup.classList.remove("showRouge")
         popup.classList.toggle("showOrange");
       }
      
