--- a/Dataviz.html
+++ b/Dataviz.html
@@ -59,7 +59,7 @@
     </select> -->
 
       <select id="selectRegion" name="région recherché">
-          <option value="">--Sélectionner votre région --</option>
+          <option value="">--Sélectionner votre région Française --</option>
         </select>
   
         <select id="selectCity" name="ville recherché">
